@@ -29,4 +29,5 @@ New branching rule. 20% with 0.9 cost_update_factor
 --- 30 dec full ---
 No custom branching
 --- 31 dec full 1 ---
+Always provide solutions
 
